tests/baselines/reference/checkJsdocTypeTagOnExportAssignment2.errors.txt
b.js(2,18): error TS2353: Object literal may only specify known properties, and 'c' does not exist in type 'Foo'.


==== checkJsdocTypeTagOnExportAssignment2.js (0 errors) ====
    
==== a.ts (0 errors) ====
    export interface Foo {
        a: number;
        b: number;
    }
    
==== b.js (1 errors) ====
    /** @type {import("./a").Foo} */
    export default { c: false };
                     ~
!!! error TS2353: Object literal may only specify known properties, and 'c' does not exist in type 'Foo'.
    
==== c.js (0 errors) ====
    import b from "./b";
    b;
    